[gd_scene load_steps=5 format=2]

[ext_resource path="res://ressources/img/tile_vehicles.png" type="Texture" id=1]
[ext_resource path="res://ressources/script/vehicle/old_html_plane.gd" type="Script" id=2]
[ext_resource path="res://ressources/sound/vehicle/plane_idle.mp3" type="AudioStream" id=3]
[ext_resource path="res://ressources/sound/vehicle/plane_run.wav" type="AudioStream" id=4]

[node name="plane" type="RigidBody2D"]
collision_layer = 1024
collision_mask = 63
can_sleep = false
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collision_left" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -23, -10, -21, -10, -21, -9, -20, -9, -20, -7, -19, -7, -19, -6, -18, -6, -18, -5, -17, -5, -17, -4, -16, -4, -16, -3, -15, -3, -15, -1, -12, -1, -12, -2, -9, -2, -9, -3, -8, -3, -8, -4, -6, -4, -6, -5, -5, -5, -5, -6, -4, -6, -4, -7, -2, -7, -2, -8, -1, -8, -1, -9, 1, -9, 1, -8, 4, -8, 4, -7, 8, -7, 8, -6, 9, -6, 9, -5, 10, -5, 10, -4, 11, -4, 11, -3, 12, -3, 12, -2, 17, -2, 17, -1, 20, -1, 20, 0, 22, 0, 22, 1, 23, 1, 23, 2, 24, 2, 24, 4, 23, 4, 23, 5, 22, 5, 22, 6, 21, 6, 21, 7, 19, 7, 19, 8, 12, 8, 12, 9, -7, 9, -7, 8, -9, 8, -9, 7, -12, 7, -12, 6, -20, 6, -20, 5, -21, 5, -21, 1, -22, 1, -22, -4, -23, -4 )
disabled = true

[node name="collision_right" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -17, -2, -12, -2, -12, -3, -11, -3, -11, -4, -10, -4, -10, -5, -9, -5, -9, -6, -8, -6, -8, -7, -4, -7, -4, -8, -1, -8, -1, -9, 1, -9, 1, -8, 2, -8, 2, -7, 4, -7, 4, -6, 5, -6, 5, -5, 6, -5, 6, -4, 8, -4, 8, -3, 9, -3, 9, -2, 12, -2, 12, -1, 15, -1, 15, -3, 16, -3, 16, -4, 17, -4, 17, -5, 18, -5, 18, -6, 19, -6, 19, -7, 20, -7, 20, -9, 21, -9, 21, -10, 23, -10, 23, -4, 22, -4, 22, 1, 21, 1, 21, 5, 20, 5, 20, 6, 12, 6, 12, 7, 9, 7, 9, 8, 7, 8, 7, 9, -12, 9, -12, 8, -19, 8, -19, 7, -21, 7, -21, 6, -22, 6, -22, 5, -23, 5, -23, 4, -24, 4, -24, 2, -23, 2, -23, 1, -22, 1, -22, 0, -20, 0, -20, -1, -17, -1 )

[node name="position2D_muzzle" type="Position2D" parent="."]
visible = false
position = Vector2( -24, 5 )

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2048
collision_mask = 33

[node name="collision_left" type="CollisionPolygon2D" parent="area2D"]
polygon = PoolVector2Array( -23, -10, -21, -10, -21, -9, -20, -9, -20, -7, -19, -7, -19, -6, -18, -6, -18, -5, -17, -5, -17, -4, -16, -4, -16, -3, -15, -3, -15, -1, -12, -1, -12, -2, -9, -2, -9, -3, -8, -3, -8, -4, -6, -4, -6, -5, -5, -5, -5, -6, -4, -6, -4, -7, -2, -7, -2, -8, -1, -8, -1, -9, 1, -9, 1, -8, 4, -8, 4, -7, 8, -7, 8, -6, 9, -6, 9, -5, 10, -5, 10, -4, 11, -4, 11, -3, 12, -3, 12, -2, 17, -2, 17, -1, 20, -1, 20, 0, 22, 0, 22, 1, 23, 1, 23, 2, 24, 2, 24, 4, 23, 4, 23, 5, 22, 5, 22, 6, 21, 6, 21, 7, 19, 7, 19, 8, 12, 8, 12, 9, -7, 9, -7, 8, -9, 8, -9, 7, -12, 7, -12, 6, -20, 6, -20, 5, -21, 5, -21, 1, -22, 1, -22, -4, -23, -4 )

[node name="collision_right" type="CollisionPolygon2D" parent="area2D"]
polygon = PoolVector2Array( -17, -2, -12, -2, -12, -3, -11, -3, -11, -4, -10, -4, -10, -5, -9, -5, -9, -6, -8, -6, -8, -7, -4, -7, -4, -8, -1, -8, -1, -9, 1, -9, 1, -8, 2, -8, 2, -7, 4, -7, 4, -6, 5, -6, 5, -5, 6, -5, 6, -4, 8, -4, 8, -3, 9, -3, 9, -2, 12, -2, 12, -1, 15, -1, 15, -3, 16, -3, 16, -4, 17, -4, 17, -5, 18, -5, 18, -6, 19, -6, 19, -7, 20, -7, 20, -9, 21, -9, 21, -10, 23, -10, 23, -4, 22, -4, 22, 1, 21, 1, 21, 5, 20, 5, 20, 6, 12, 6, 12, 7, 9, 7, 9, 8, 7, 8, 7, 9, -12, 9, -12, 8, -19, 8, -19, 7, -21, 7, -21, 6, -22, 6, -22, 5, -23, 5, -23, 4, -24, 4, -24, 2, -23, 2, -23, 1, -22, 1, -22, 0, -20, 0, -20, -1, -17, -1 )

[node name="sound" type="Node2D" parent="."]

[node name="audiostreamplayer2D_idle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="audiostreamplayer2D_run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_plane_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_plane_body_shape_entered"]
[connection signal="body_entered" from="area2D" to="." method="_on_area2D_body_entered"]
[connection signal="body_exited" from="area2D" to="." method="_on_area2D_body_exited"]
